Fix download block edit JS and scrol overflow

--- a/src/noosfero-spb/noosfero-spb-theme/css/administration-panel.css
+++ b/src/noosfero-spb/noosfero-spb-theme/css/administration-panel.css
@@ -797,7 +797,7 @@
 
 /* Members management */
 .action-profile_members-index #members-list td{
-  padding-top: 5px; 
+  padding-top: 5px;
 }
 
 /*recover behavior of noosfero*/
@@ -989,4 +989,10 @@
 .action-profile_design-index #content #box-organizer .block-outer:hover .software-communities-plugin_software-information-block .button-bar {
   margin-top: 31px;
 }
-/*** Area 4 edition buttons */
+/*** End - Area 4 edition buttons */
+
+/* Download Link Scroll options */
+.action-profile_design-index .download-forms .toggle-form ul {
+  overflow: auto;
+}
+/*** End - Download Link Scroll options */
